Extract all editor UI from GameObject classes
All built-in game object types' editor UI had been extracted out of the classes to their corresponding templates. This will further decouple the main engine's code from the editor.